﻿Version 7.0
> Completely rewritten in WPF
> Added global exception handler
> Added analytics and exceptions reports
> Redesigned backup functions
> Auto-detects steam location