@@ -1,0 +1,6 @@
+﻿namespace SmModManager.Core.Enums
+{
+
+    public enum BackupType { World, Game }
+
+}
