@@ -1,6 +1,0 @@
-﻿namespace SmModManager.Core.Enums
-{
-
-    public enum UpdatePreferenceOptions { AlwaysAutoUpdate, RemindForUpdates, DontCheckForUpdates }
-
-}
